# lightning-mesh

./: .gitignore  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  package.json
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: cla.yml
contributors/: individual.md
crates/mjolnir-audio/: Cargo.toml  build.rs
crates/mjolnir-audio/src/: capture.rs  codec.rs  conceal.rs  device.rs  lib.rs  mixer.rs  playback.rs  subscribe.rs
crates/mjolnir-audio/tests/: plc_integration.rs
crates/mjolnir-hello/: .gitignore  Cargo.toml
crates/mjolnir-hello/src/: assets.rs  config.rs  main.rs  routes.rs
crates/mjolnir-hello/static/: index.html
crates/mjolnir-media/: Cargo.toml
crates/mjolnir-media/src/: jitter.rs  lib.rs  recover.rs  service.rs
crates/mjolnir-mesh/: Cargo.toml  build.rs
crates/mjolnir-mesh/src/: alloc.rs  bootstrap.rs  dns_conformance_tests.rs  dns_responder.rs  lib.rs  roster.rs
crates/mjolnir-mesh/src/babel/: config.rs  mod.rs  supervisor.rs
crates/mjolnir-mesh/src/crdt/: egress.rs  gossip.rs  leased_name.rs  liveness.rs  merge.rs  mod.rs  peer_addr.rs  service.rs  service_apply.rs  sync.rs  users.rs
crates/mjolnir-mesh/src/tun/: fib.rs  iface.rs  link.rs  mcast.rs  mod.rs  overlay.rs
crates/mjolnir-mesh/tests/: babel_pipeline.rs  service_mesh_convergence.rs  services_gossip_e2e.rs  users_gossip_e2e.rs
crates/mjolnir-meshctl/: Cargo.toml
crates/mjolnir-meshctl/src/: apply.rs  deploy.rs  inventory.rs  main.rs  plan.rs  routeros.rs  ssh.rs
crates/mjolnir-moq/: Cargo.toml
crates/mjolnir-moq/src/: lib.rs  session.rs
crates/mjolnir-node/: Cargo.toml
crates/mjolnir-node/src/: audio_proto.rs  main.rs  mesh.rs  room.rs  ticket.rs
deploy/mikrotik/: Dockerfile  README.md  apply-routing-and-test.sh  build.sh  container-net-lan.rsc  container-net.rsc  deploy-mesh.sh  fetch-firmware.sh  routers.toml  wifi-backhaul.rsc
deploy/mikrotik/rosters/: router-1.roster  router-2.roster
deploy/openwrt/: README.md  build-hello.sh  fleet-nodes.conf  install-node.sh  setup-wireless.sh  update-fleet.sh  validate-fleet.sh
deploy/openwrt/files/etc/config/: mjolnir
deploy/openwrt/files/etc/init.d/: iperf3-server  mjolnir-babeld  mjolnir-hello  mjolnir-meshd
deploy/openwrt/files/usr/sbin/: mjolnir-apply
deploy/openwrt/fleet-secrets/: wireless.env.example
docs/: mesh-network-coordination.md  prd-mesh-naming-first-stone.md
docs/architecture/: dhcp-crdt.md  neural-bridge-plc.md  p2p-resilience.md  self-healing-jitter-buffer.md
docs/archive/: README.md
docs/archive/mikrotik-container/: 4-node-lan-bringup.md  client-routing.md  container-networking.md  mesh-bringup.md  mikrotik-routeros-container.md
docs/archive/network-coordination/: dhcp-crdt.md  dnsmasq-integration.md  mesh-network-coordination.md
docs/deploy/: mesh-bringup.md  mikrotik-routeros-container.md  node-operations.md  tier1-client-validation.md
docs/network-coordination/: babel-routing.md  collective-coordination-protocol.md  gateway-liveness.md  gossip-and-crdt.md  guilds-overlay-vision.md  ipv6-addressing-decision.md  island-formation.md  membership-enrollment.md  mesh-naming.md  network-architecture.md  p2p-resilience.md  prior-art.md  radio-backhaul-and-discovery.md  user-identity-and-captive-portal.md  user-identity.md
docs/plans/initiatives/: dual-layer-architecture.md
docs/products/hello.mesh/: prd.md
docs/research/manet-dynamic-addressing/: README.md
docs/research/openwrt-mesh-hardware/: decomposition.md  summary.json  synthesis-pass2.md  synthesis.md
docs/research/openwrt-mesh-hardware/hypotheses/h1-mt76-bare-boards/: findings.md
docs/research/openwrt-mesh-hardware/hypotheses/h2-ath9k-ath10k-boards/: findings.md
docs/research/openwrt-mesh-hardware/hypotheses/h3-sbc-mpcie-cards/: findings.md
docs/research/openwrt-mesh-hardware/hypotheses/h4-driver-mesh-reality/: findings.md
docs/research/openwrt-mesh-hardware/hypotheses/h5-openhw-antenna-rf/: findings.md
docs/research/openwrt-mesh-hardware/pass2/: caseless-boards.md  chip-driver-catalog.md  tri-radio-recipes.md
docs/research/openwrt-mesh-hardware/pass3-budget/: ath9k-ath10k-cheap.md  glinet-ecosystem.md  mt7981-cheap-routers.md  mt7986-budget-and-bareboard.md  synthesis-budget.md
docs/sprints/001-hello-mesh/: plan.md
docs/sprints/002-mesh-naming/: architecture-decisions.md  epics.md
docs/talk/: dweb-2026-commons-frame.md  dweb-2026-lightning-mesh.md  dweb-2026-myanmar-why-PRIVATE.md  dweb-2026-personal-narrative.md  dweb-2026-talk-outline.md  dweb-2026-talk-script.md  dweb-2026-technical-arc.md
docs/vision/: decentralized-systems-design.md  mjolnir-integration.md  philosophical-outcomes.md  why-decentralized-mesh.md
hello-mesh-web/: .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  svelte.config.js  vite.config.ts
hello-mesh-web/src/: app.html
hello-mesh-web/src/lib/components/: CustodyNotice.svelte  DirectoryPanel.svelte  IdentityPanel.svelte  MdnsPanel.svelte  RoutersPanel.svelte  ServicesPanel.svelte  TopologyPanel.svelte
hello-mesh-web/src/lib/directory/: api.spec.ts  api.ts
hello-mesh-web/src/lib/identity/: api.ts  hex.spec.ts  hex.ts  keys.spec.ts  keys.ts  storage.ts
hello-mesh-web/src/lib/topology/: api.ts  fixtures.ts  graph.spec.ts  graph.ts  store.svelte.ts
hello-mesh-web/src/routes/: +layout.js  +layout.ts  +page.svelte
spike/: buw-multicast-spike.sh
