[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# iroh networking
iroh = "1.0"
iroh-gossip = "0.101"
web-transport-iroh = "0.6"

# MoQ protocol
moq-lite = "0.15"

# audio
opus = "0.3"
cpal = "0.17"
rtrb = "0.3"

# pure-Rust ONNX inference for neural PLC backends. Sonos's runtime —
# designed for on-device real-time DSP, no dynamic library, smaller op
# coverage than ort but a better fit for the audio thread's allocation
# and latency constraints. See docs/research/audio-models-for-neural-plc/.
tract-onnx = { version = "0.22", default-features = false }

# async runtime
tokio = { version = "1", features = ["full"] }
n0-future = "0.3"

# serialization
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

# encoding
data-encoding = "2"
rand = "0.9"

# network types
ipnet = { version = "2", features = ["serde"] }

# utilities
blake3 = "1"
thiserror = "2"
futures-lite = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"

# meshctl operator tool (host-native; not built into the container image)
toml = "0.8"
