[package]
name = "mjolnir-audio"
description = "Opus audio capture, encoding, decoding, and playback for mesh streaming"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mjolnir-media = { path = "../mjolnir-media" }
opus.workspace = true
cpal.workspace = true
bytes.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
