# mjolnir-hello — hello.mesh front desk: static frontend + read-only mesh API.
#
# Deliberately separate from mjolnir-meshd so it never bloats the router
# daemon image and can be built/deployed/skipped independently (a node runs
# the mesh fine without it). Depends on the mjolnir-mesh LIBRARY with DEFAULT
# features only (no `daemon` feature => no iroh) so this crate stays iroh-free
# and builds natively on any host, including macOS/arm64 dev machines. See
# docs/network-coordination/hello-mesh-service.md §3 and bead mjolnir-mesh-bl2.
[package]
name = "mjolnir-hello"
description = "mjolnir-hello: hello.mesh front desk server (embedded static bundle + read-only mesh API)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mjolnir-hello"
path = "src/main.rs"

[dependencies]
# Default features only — no `daemon`, so this stays iroh-free. We only need
# the CRDT type definitions (AddrBook, ServiceEntry, ...) for the read/identity
# APIs landing in S3/S4.
mjolnir-mesh = { path = "../mjolnir-mesh" }
tiny_http = "0.12"
rust-embed = "8"
serde.workspace = true
serde_json = "1"
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
