[package]
name = "mjolnir-mesh"
description = "mjolnir-mesh: networking library for the mesh substrate (CRDT, gossip, Babel integration)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
ipnet = { workspace = true }
blake3.workspace = true
thiserror.workspace = true
async-trait = "0.1"
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
nix = { version = "0.31", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21"
tun = "0.8"
