[package]
name = "mjolnir-mesh"
description = "mjolnir-mesh: networking library for the mesh substrate (CRDT, gossip, Babel integration)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
ipnet = { workspace = true }
blake3.workspace = true
thiserror.workspace = true
async-trait = "0.1"
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
nix = { version = "0.31", features = ["signal", "process"] }

# Daemon-only deps. Kept optional so the substrate library and its tests stay
# iroh-free (the DatagramConn seam is what decouples them); enabled by the
# `daemon` feature for the mjolnir-meshd binary. See beads mjolnir-mesh-tr6/02g.
iroh = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
data-encoding = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
daemon = ["dep:iroh", "dep:clap", "dep:anyhow", "dep:data-encoding", "dep:rand", "dep:tracing-subscriber"]

# The headless iroh-transport daemon. Requires --features daemon to build.
[[bin]]
name = "mjolnir-meshd"
required-features = ["daemon"]

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21"
# `async` feature gives create_as_async + AsyncDevice (AsyncRead/AsyncWrite),
# used by the tunnel data plane (spawn_tunnel).
tun = { version = "0.8", features = ["async"] }
# TryStreamExt for rtnetlink's link/address streams (used in tun/iface.rs).
futures-util = "0.3"
