[package]
name = "mjolnir-mesh"
description = "mjolnir-mesh: networking library for the mesh substrate (CRDT, gossip, Babel integration)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
# JSON serialization for the read-only directory.json projection (bead avs) —
# mjolnir-hello reads this file, so it needs a human/JS-friendly format rather
# than the postcard binary encoding used for the daemon's own CRDT persistence.
serde_json = { version = "1", optional = true }
ipnet = { workspace = true }
blake3.workspace = true
thiserror.workspace = true
async-trait = "0.1"
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true

# Daemon-only deps. Kept optional so the substrate library and its tests stay
# iroh-free (the DatagramConn seam is what decouples them); enabled by the
# `daemon` feature for the mjolnir-meshd binary. See beads mjolnir-mesh-tr6/02g.
iroh = { workspace = true, optional = true }
# LAN peer discovery (mDNS) for `--lan` mode — no relay or internet needed.
# iroh 1.0 moved mDNS out of iroh's feature flags into this standalone crate.
iroh-mdns-address-lookup = { version = "0.4", optional = true }
# CRDT gossip overlay (the concrete `GossipTransport` impl for crdt::sync).
iroh-gossip = { workspace = true, optional = true }
# `StreamExt::next` on the gossip event stream — cross-platform (unlike the
# linux-only `futures-util` used by rtnetlink below).
futures-lite = { version = "2", optional = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
data-encoding = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
daemon = ["dep:iroh", "dep:iroh-mdns-address-lookup", "dep:iroh-gossip", "dep:futures-lite", "dep:clap", "dep:anyhow", "dep:data-encoding", "dep:rand", "dep:tracing-subscriber", "dep:serde_json"]

# buw.1 spike: a minimal single-overlay-TUN node that stands a UDP socket in for
# the iroh DatagramConn seam, so babel-over-overlay can be validated with real
# babeld and no iroh. Linux-only (TUN + rtnetlink). See spike/buw-multicast-spike.sh.
spike = ["tokio/net", "tokio/macros", "tokio/rt-multi-thread", "tokio/io-util", "tokio/signal", "dep:tracing-subscriber"]

# The headless iroh-transport daemon. Requires --features daemon to build.
[[bin]]
name = "mjolnir-meshd"
required-features = ["daemon"]

# buw.1 spike node — see the `spike` feature above.
[[bin]]
name = "buw-overlay-spike"
required-features = ["spike"]

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21"
# `async` feature gives create_as_async + AsyncDevice (AsyncRead/AsyncWrite),
# used by the tunnel data plane (spawn_tunnel).
tun = { version = "0.8", features = ["async"] }
# TryStreamExt for rtnetlink's link/address streams (used in tun/iface.rs).
futures-util = "0.3"
