# meshctl — operator-side reconciler for the mjolnir mesh router swarm.
#
# This is HOST tooling: it runs on the operator's machine and drives MikroTik
# routers over SSH (observe via generated RouterOS query scripts, apply via
# idempotent script snippets). It is deliberately NOT part of the in-container
# daemon image — `deploy/mikrotik/build.sh` cross-compiles only
# `--bin mjolnir-meshd --features daemon`, so this host tool never bloats the
# 128MB-NAND container.
[package]
name = "mjolnir-meshctl"
description = "meshctl: operator-side RouterOS reconciler for the mjolnir mesh swarm"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshctl"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
